@@ -10,3 +10,4 @@ htmlcov
 dist
 build
 *.egg-info
+.cache
