@@ -97,8 +97,122 @@ cluster-enabled yes
 cluster-config-file /tmp/redis_cluster_node8.conf
 endef
 
+
+# CLUSTER REDIS PASSWORD PROTECTED NODES
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE1_CONF
+daemonize yes
+port 7100
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node1.pid
+logfile /tmp/redis_cluster_password_protected_node1.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node1.conf
+endef
+
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE2_CONF
+daemonize yes
+port 7101
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node2.pid
+logfile /tmp/redis_cluster_password_protected_node2.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node2.conf
+endef
+
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE3_CONF
+daemonize yes
+port 7102
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node3.pid
+logfile /tmp/redis_cluster_password_protected_node3.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node3.conf
+endef
+
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE4_CONF
+daemonize yes
+port 7103
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node4.pid
+logfile /tmp/redis_cluster_password_protected_node4.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node4.conf
+endef
+
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE5_CONF
+daemonize yes
+port 7104
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node5.pid
+logfile /tmp/redis_cluster_password_protected_node5.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node5.conf
+endef
+
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE6_CONF
+daemonize yes
+port 7105
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node6.pid
+logfile /tmp/redis_cluster_password_protected_node6.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node6.conf
+endef
+
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE7_CONF
+daemonize yes
+port 7106
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node7.pid
+logfile /tmp/redis_cluster_password_protected_node7.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node7.conf
+endef
+
+define REDIS_CLUSTER_PASSWORD_PROTECTED_NODE8_CONF
+daemonize yes
+port 7107
+cluster-node-timeout 5000
+pidfile /tmp/redis_cluster_password_protected_node8.pid
+logfile /tmp/redis_cluster_password_protected_node8.log
+save ""
+masterauth password_is_protected
+requirepass password_is_protected
+appendonly no
+cluster-enabled yes
+cluster-config-file /tmp/redis_cluster_password_protected_node8.conf
+endef
+
 ifndef REDIS_TRIB_RB
-	REDIS_TRIB_RB=redis-git/src/redis-trib.rb
+	REDIS_TRIB_RB=tests/redis-trib.rb
 endif
 
 export REDIS_CLUSTER_NODE1_CONF
@@ -110,10 +224,19 @@ export REDIS_CLUSTER_NODE6_CONF
 export REDIS_CLUSTER_NODE7_CONF
 export REDIS_CLUSTER_NODE8_CONF
 
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE1_CONF
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE2_CONF
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE3_CONF
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE4_CONF
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE5_CONF
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE6_CONF
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE7_CONF
+export REDIS_CLUSTER_PASSWORD_PROTECTED_NODE8_CONF
+
 help:
 	@echo "Please use 'make <target>' where <target> is one of"
 	@echo "  clean           remove temporary files created by build tools"
-	@echo "  cleanmeta       removes all META-* and egg-info/ files created by build tools"	
+	@echo "  cleanmeta       removes all META-* and egg-info/ files created by build tools"
 	@echo "  cleancov        remove all files related to coverage reports"
 	@echo "  cleanall        all the above + tmp files from development tools"
 	@echo "  test            run test suite"
@@ -167,12 +290,27 @@ start: cleanup
 	echo "$$REDIS_CLUSTER_NODE6_CONF" | redis-server -
 	echo "$$REDIS_CLUSTER_NODE7_CONF" | redis-server -
 	echo "$$REDIS_CLUSTER_NODE8_CONF" | redis-server -
+
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE1_CONF" | redis-server -
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE2_CONF" | redis-server -
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE3_CONF" | redis-server -
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE4_CONF" | redis-server -
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE5_CONF" | redis-server -
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE6_CONF" | redis-server -
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE7_CONF" | redis-server -
+	echo "$$REDIS_CLUSTER_PASSWORD_PROTECTED_NODE8_CONF" | redis-server -
+
 	sleep 5
 	echo "yes" | ruby $(REDIS_TRIB_RB) create --replicas 1 127.0.0.1:7000 127.0.0.1:7001 127.0.0.1:7002 127.0.0.1:7003 127.0.0.1:7004 127.0.0.1:7005
+
+	sleep 5
+	echo "yes" | ruby $(REDIS_TRIB_RB) create --replicas 1 --password password_is_protected 127.0.0.1:7100 127.0.0.1:7101 127.0.0.1:7102 127.0.0.1:7103 127.0.0.1:7104 127.0.0.1:7105
+
 	sleep 5
 
 cleanup:
 	- rm -vf /tmp/redis_cluster_node*.conf 2>/dev/null
+	- rm -vf /tmp/redis_cluster_password_protected_node*.conf 2>/dev/null
 	- rm dump.rdb appendonly.aof - 2>/dev/null
 
 stop:
@@ -184,6 +322,16 @@ stop:
 	kill `cat /tmp/redis_cluster_node6.pid` || true
 	kill `cat /tmp/redis_cluster_node7.pid` || true
 	kill `cat /tmp/redis_cluster_node8.pid` || true
+
+	kill `cat /tmp/redis_cluster_password_protected_node1.pid` || true
+	kill `cat /tmp/redis_cluster_password_protected_node2.pid` || true
+	kill `cat /tmp/redis_cluster_password_protected_node3.pid` || true
+	kill `cat /tmp/redis_cluster_password_protected_node4.pid` || true
+	kill `cat /tmp/redis_cluster_password_protected_node5.pid` || true
+	kill `cat /tmp/redis_cluster_password_protected_node6.pid` || true
+	kill `cat /tmp/redis_cluster_password_protected_node7.pid` || true
+	kill `cat /tmp/redis_cluster_password_protected_node8.pid` || true
+
 	rm -f /tmp/redis_cluster_node1.conf
 	rm -f /tmp/redis_cluster_node2.conf
 	rm -f /tmp/redis_cluster_node3.conf
@@ -193,6 +341,15 @@ stop:
 	rm -f /tmp/redis_cluster_node7.conf
 	rm -f /tmp/redis_cluster_node8.conf
 
+	rm -f /tmp/redis_cluster_password_protected_node1.conf
+	rm -f /tmp/redis_cluster_password_protected_node2.conf
+	rm -f /tmp/redis_cluster_password_protected_node3.conf
+	rm -f /tmp/redis_cluster_password_protected_node4.conf
+	rm -f /tmp/redis_cluster_password_protected_node5.conf
+	rm -f /tmp/redis_cluster_password_protected_node6.conf
+	rm -f /tmp/redis_cluster_password_protected_node7.conf
+	rm -f /tmp/redis_cluster_password_protected_node8.conf
+
 test:
 	make start
 	make tox
@@ -201,6 +358,7 @@ test:
 tox:
 	coverage erase
 	tox
+	TEST_PASSWORD_PROTECTED tox
 	coverage combine
 	coverage report
 
