@@ -21,3 +21,4 @@ Authors who contributed code or testing:
  - mumumu - https://github.com/mumumu
  - awestendorf - https://github.com/awestendorf
  - Ali-Akber Saifee - https://github.com/alisaifee
+ - etng - https://github.com/etng
